# unlok-next

./: CHANGELOG.md  pyproject.toml
.github/workflows/: tests.yaml
graphql/fragments/: client.graphql  message.graphql  room.graphql  service_instance.graphql  stream.graphql  user_defined_service_instance.graphql
graphql/mutations/: client.graphql  create_client.graphql  instance.graphql  message.graphql  room.graphql  stream.graphql  user_defined.graphql
graphql/queries/: room.graphql  stream.graphql
graphql/subscriptions/: room.graphql
tests/: conftest.py  flows.py  test_definition.py  test_flow_serialization.py  test_stream.py
tests/configs/: test.yaml
tests/flowjsons/: add_three_flow.json
tests/integration/: docker-compose.yaml  docker-compose.yml  fluss.yaml
tests/integration/configs/: lok.yaml  minio.yaml
unlok_next/: __arkitekt__.py  __init__.py  arkitekt.py  structures.py
unlok_next/api/: schema.py
