[project]
name = "unlok-next"
version = "0.2.0"
description = ""
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "rath>=3.4",
    "websockets>=15.0.1",
]

[tool.uv]
dev-dependencies =  [
    "dokker>=2",
]


[tool.hatch.build.targets.sdist]
include = ["unlok_next"]

[tool.hatch.build.targets.wheel]
include = ["unlok_next"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = ["venv/", "tests/"]
ignore_missing_imports = true

[tool.ruff]
extend-select = ["ANN", "D1"]
ignore = ["ANN101"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a deployment via testcontainers",
]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"
